fix: generator adjustments
